welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:38: error: '=' expected but identifier found.
def faireL/(){
          ^PatternPicture:51: error: illegal start of simple expression
}
^