welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run(){
  carre()
    
 
}


def marque(){
  baisseBrosse()
	leveBrosse()
}

def carre(){

    
  for(i<- 1 to 2){
    faireL()
    avance()
    faireL/()
  }
}
  
	
 
def faireL(){
  avance()
  gauche()
  marque()
  avance()
  gauche()
  avance()
  marque()
  gauche()
  avance()
  gauche()
}

def faireL/(){
  marque()
  avance()
  gauche()
  avance()
  marque()
  gauche()
  avance()
  gauche()
  avance()
  gauche()
}